# ChangeLog for dev-java/plexus-component-api
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  17 Apr 2007; kiorky <kiorky@cryptelium.net>
  +plexus-component-api-1.0.ebuild, +metadata.xml:
  added as a maven dependency
